--- a/ProjectEBA1.ipynb
+++ b/ProjectEBA1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOi3i2CnnuARadSEbsVIAQl",
+      "authorship_tag": "ABX9TyP+USUyvRs2y7BXppg5oWU3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1733,40 +1733,49 @@
     {
       "cell_type": "code",
       "source": [
-        "# Assuming your dataframe is 'data'\n",
-        "# Preprocess the data\n",
-        "# Check and convert non-numeric columns to numeric if needed\n",
         "# Create and train the KNN Regression model\n",
-        "#knn_regressor.fit(x_train, y_train)\n",
+        "print(\"Creating and training the KNN Regression model...\")\n",
+        "knn_regressor = KNeighborsRegressor(n_neighbors=5)\n",
+        "knn_regressor.fit(x_train, y_train)\n",
+        "print(\"Model trained successfully!\")\n",
+        "\n",
         "# Predict the values for the test set\n",
-        "y_pred = knn_regressor.predict(x_test)\n",
+        "print(\"Predicting the test set values...\")\n",
+        "y_pred_knn = knn_regressor.predict(x_test)\n",
+        "print(\"Prediction complete!\")\n",
         "\n",
         "# Evaluate the model\n",
-        "mse = mean_squared_error(y_test, y_pred)\n",
-        "mae = mean_absolute_error(y_test, y_pred)\n",
-        "r2 = r2_score(y_test, y_pred)\n",
+        "print(\"Evaluating the model...\")\n",
+        "mse_knn = mean_squared_error(y_test, y_pred_knn)\n",
+        "mae_knn = mean_absolute_error(y_test, y_pred_knn)\n",
+        "r2_knn = r2_score(y_test, y_pred_knn)\n",
         "\n",
-        "print(f\"Mean Squared Error (MSE): {mse}\")\n",
-        "print(f\"Mean Absolute Error (MAE): {mae}\")\n",
-        "print(f\"R-squared (R2): {r2}\")\n"
+        "print(f\"KNN Regression - Mean Squared Error (MSE): {mse_knn}\")\n",
+        "print(f\"KNN Regression - Mean Absolute Error (MAE): {mae_knn}\")\n",
+        "print(f\"KNN Regression - R-squared (R2): {r2_knn}\")\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JGZCxToaVoaE",
-        "outputId": "85d85fb9-eefb-4d99-8be0-9aa2d98a6761"
+        "outputId": "427237ec-b35d-40b9-bb6e-52f91b0a491e"
       },
-      "execution_count": 68,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mean Squared Error: 0.018333847055376502\n",
-            "Mean Squared Error (MSE): 0.018333847055376502\n",
-            "Mean Absolute Error (MAE): 0.0849147377673601\n",
-            "R-squared (R2): 0.6096878959249734\n"
+            "Creating and training the KNN Regression model...\n",
+            "Model trained successfully!\n",
+            "Predicting the test set values...\n",
+            "Prediction complete!\n",
+            "Evaluating the model...\n",
+            "KNN Regression - Mean Squared Error (MSE): 0.018333847055376502\n",
+            "KNN Regression - Mean Absolute Error (MAE): 0.0849147377673601\n",
+            "KNN Regression - R-squared (R2): 0.6096878959249734\n"
           ]
         }
       ]
